week2_working_files/assignment/starter_code/css/style.css
/*
Project Name: Blank Template
Client: Your Client
Author: Your Name
Developer @GA in NYC
*/


/******************************************
/* SETUP
/*******************************************/


/* Box Model Hack */

* {
  -moz-box-sizing: border-box;
  /* Firexfox */
  -webkit-box-sizing: border-box;
  /* Safari/Chrome/iOS/Android */
  box-sizing: border-box;
  /* IE */
  margin: 0;
  padding: 0;
}

/* Clear fix hack */

.clearfix:after {
  content: ".";
  display: block;
  clear: both;
  visibility: hidden;
  line-height: 0;
  height: 0;
}
.clear {
  clear: both;
}
.alignright {
  float: right;
  padding: 0 0 10px 10px;
  /* note the padding around a right floated image */
}
.alignleft {
  float: left;
  padding: 0 10px 10px 0;
  /* note the padding around a left floated image */
}

/******************************************
/* BASE STYLES
/*******************************************/

body {
  color: #000;
  font-size: 12px;
  line-height: 1.4;
  font-family: 'Open Sans', sans-serif;
}

/******************************************
/* LAYOUT
/*******************************************/


/* Center the container */

#container {
  width: 100%;
  margin: auto;
}
#hero {
  width: 100%;
  margin: auto;
  height: 700px;
  background: url(../images/header_bg.jpg) no-repeat center top rgb(134, 141, 157);
  background-size: cover;
}
#logo {
  padding-left: 40px;
  padding-top: 40px;
}
h1 {
  font-family: 'Open Sans', sans-serif;
  font-size: 48px;
  font-weight: 700;
  color: #ffffff;
}
header {
  font-family: 'Open Sans', sans-serif;
  font-size: 48px;
  font-weight: 500;
  color: #ffffff;
  text-align: center;
  margin-left: 80px;
  margin-top: 100px;
  margin-bottom: 70px;
}
.cta {
  font-family: 'Open Sans', sans-serif;
  font-weight: 800;
  font-size: 24px;
  color: #033048;
  text-align: center;
  background-color: #f9e42e;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-right: 50px;
  padding-left: 50px;
  border-radius: 5px;
}
button {
  text-align: center;
  margin: auto;
  border: none;
  display: block;
  background-color: inherit;
}
.cta2 {
  font-family: 'Open Sans', sans-serif;
  font-weight: 800;
  font-size: 24px;
  color: #ffffff;
  text-align: center;
  background-color: #033048;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-right: 50px;
  padding-left: 50px;
  border-radius: 5px;
  display: block;
  margin-top: 20px;
  margin: 20px;
}
a {
  font-family: 'Open Sans', sans-serif;
  text-decoration: none;
  text-align: center;
}
#benefits {
  width: 100%;
  margin: auto;
  background-color: #f0efef;
  height: auto;
}
h2 {
  font-family: 'Open Sans', sans-serif;
  font-size: 40px;
  font-weight: 600;
  color: #033048;
  text-align: left;
  padding-left: 80px;
  padding-top: 80px;
}
p {
  font-family: 'Open Sans', sans-serif;
  font-size: 24px;
  font-weight: 300;
  color: #606161;
  text-align: left;
  padding-left: 80px;
  padding-right: 280px;
  padding-top: 20px;
  padding-bottom: 30px;
}
li {
  padding: 15px;
  list-style-type: disc;
}
ul {
  font-family: 'Open Sans', sans-serif;
  font-size: 24px;
  font-weight: 100;
  color: #606161;
  text-align: left;
  padding-left: 180px;
  padding-right: 360px;
}
h3 {
  font-family: 'Open Sans', sans-serif;
  font-size: 30px;
  font-weight: 600;
  color: #ffffff;
  text-align: center;
  padding-bottom: 50px;
  padding-top: 10px;
}
#testimonial {
  background: url(../images/testimonial_bg.jpg) no-repeat center top rgb(134, 141, 157);
  background-size: cover;
}
blockquote {
  font-family: 'Open Sans', sans-serif;
  font-size: 35px;
  font-weight: 300;
  font-style: italic;
  color: #ffffff;
  text-align: center;
  padding-top: 50px;
  padding-left: 320px;
  padding-right: 320px;
  margin: auto;
}
#signupnow {
  background-color: #f9e42e;
  height: 100px;
}
ul a {
  color: #ffffff;
}
ul {
text-align: center;
}

.footerlogo {
  font-family: 'Open Sans', sans-serif;
  font-size: 40px;
  font-weight: 700;
  color: #f9e42e;
  text-align: center;
  padding: 30px;
}
.socialmedia {
  color: #ffffff;
  text-align: center;
  padding-left: 160px;
}
.footertext {
  color: #ffffff;
  font-size: 16px;
  text-align: center;
  padding: 40px;
}
footer {
  background-color: #121212;
}

/******************************************
/* ADDITIONAL STYLES
/*******************************************/

